--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@craco/craco": "^5.6.4",
     "@material-ui/core": "^4.9.10",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.49",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -17,7 +18,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-mobx": "^0.0.4",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-swipeable-views": "^0.13.9"
   },
   "scripts": {
     "start": "craco start",
